--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,9 @@ version = project.mod_version
 group = project.maven_group
 
 repositories {
+    maven {
+        url 'https://maven.fabricmc.net/'
+    }
 	// Add repositories to retrieve artifacts from in here.
 	// You should only use this when depending on other mods because
 	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
@@ -28,6 +31,8 @@ dependencies {
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
 	modImplementation "net.fabricmc.fabric-api:fabric-networking-api-v1:${fabric_version}"
+
+	implementation 'com.google.code.gson:gson:2.10.1'
 	// Uncomment the following line to enable the deprecated Fabric API modules. 
 	// These are included in the Fabric API production distribution and allow you to update your mod to the latest modules at a later more convenient time.
 
