Big 1.21.8 Overhaul/Refactor
- Ripped out old config system
- Ripped out old network logic
- Separated logic into main and client
- Better handling
- Less hair left

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,16 +3,20 @@ org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
 # Fabric Properties
-	# check these on https://fabricmc.net/develop
-	minecraft_version=1.20
-	yarn_mappings=1.20+build.1
-	loader_version=0.15.7
+# check these on https://fabricmc.net/develop
+minecraft_version=1.21.8
+yarn_mappings=1.21.8+build.1
+loader_version=0.16.14
+loom_version=1.11-SNAPSHOT
 
-	
 # Mod Properties
-	mod_version = 1.0.6
-	maven_group = com.enhancedmovement.kestalkayden
-	archives_base_name = fabric-enhancedmovement
+mod_version=1.1.0+mc1.21.8
+maven_group=com.enhancedmovement.kestalkayden
+archives_base_name=enhanced-movement
 
 # Dependencies
-	fabric_version=0.83.0+1.20
+fabric_version=0.129.0+1.21.8
+
+# Config Dependencies
+cloth_config_version=15.0.140
+modmenu_version=11.0.3
